# zero2prod

./: .env  Cargo.toml  rust-syntax.md
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: general.yml
.sqlx/: query-ba20effdca00d762d9b1be53b32d1d7adcb286c69f1c4413f892ca04f4957bdc.json
JIT-learning/: cheatsheet.md
JIT-learning/concepts/: modules-and-visibility.md
rust-version/src/: lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
rust-version/src/routes/: subscriptions.rs
rust-version/tests/: health_check.rs
scripts/: init_db.sh
src/: main.rs
