[package]
name = "zero2prod"
version = "0.1.0"
# NOTE: Rust editions are not calendar years!
# Valid editions: 2015, 2018, 2021, 2024
# The edition indicates which language features/breaking changes are enabled
# Even though we're in 2025, Rust 2024 edition is the latest available
edition = "2024"
authors = [ "Marc GRIS <contact@marcgris.com>" ]


[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field.
# If unspecified, cargo will default to `package.name`, which is what we want.
path = "rust-version/src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# To manage multiple libraries in the same repository: the workspace feature.
[[bin]]
name = "zero2prod"
path = "rust-version/src/main.rs"

# Integration tests: With custom paths, Cargo doesn't auto-discover tests.
# Each test file must be explicitly declared here (unfortunately, no glob support).
# TODO: Move to standard layout (tests/ at root) for auto-discovery.
[[test]]
name = "health_check"
path = "rust-version/tests/health_check.rs"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
const_format = "0.2"  # For compile-time string composition
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
config = "0.14"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
log = "0.4"
env_logger = "0.9"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls", "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
reqwest = "0.12"
